plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.6'
	id 'io.spring.dependency-management' version '1.1.7'
    id 'com.diffplug.spotless' version '8.0.0'
}

group = 'com.lhv'
version = '0.0.1-SNAPSHOT'
description = 'Service to manage and identify sanctioned individuals.'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
    implementation 'org.springframework.data:spring-data-elasticsearch:5.5.5'

    implementation("org.apache.commons:commons-text:1.14.0") {
        exclude group: "org.apache.commons", module: "commons-lang3"
    }

    implementation("org.apache.commons:commons-lang3:3.19.0")

    implementation("org.liquibase:liquibase-core:5.0.1")
    implementation("org.postgresql:postgresql:42.7.8")

    implementation("co.elastic.clients:elasticsearch-java:8.19.5")

    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13")

    compileOnly 'org.projectlombok:lombok:1.18.42'
    annotationProcessor 'org.projectlombok:lombok:1.18.42'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.junit.jupiter:junit-jupiter-params'
    testImplementation 'org.mockito:mockito-core:5.20.0'
    testImplementation 'org.projectlombok:lombok:1.18.42'
    testImplementation("org.testcontainers:junit-jupiter:1.21.3")
    testImplementation("org.testcontainers:elasticsearch:1.21.3")
    testImplementation("org.testcontainers:postgresql:1.21.3")
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.42'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

spotless {
    java {
        googleJavaFormat('1.30.0')
        target 'src/**/*.java'
    }
}

tasks.test {
    useJUnitPlatform()
    systemProperty "spring.profiles.active", "test"
}